# django_shitty_test_app

./: README.md  manage.py  pyproject.toml
app/: admin.py  models.py
app/migrations/: 0001_initial.py  0002_wbsupplymodel_wbtaskmodel_wbordermodel_qr_code_and_more.py  0003_wborderproductmodel_code_alter_wbordermodel_qr_code_and_more.py  0004_remove_wbordermodel_has_honest_sign_and_more.py  0005_alter_wborderproductmodel_wb_sgtin.py  0006_alter_wborderproductmodel_wb_sgtin.py  0007_alter_wbordermodel_supply.py
django_shitty_test/: asgi.py  settings.py  urls.py  wsgi.py
templates/admin/app/wbtaskmodel/: change_form.html
